[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://GroundTextures.tres" type="TileSet" id=3]
[ext_resource path="res://FantasyTextures.tres" type="TileSet" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.32684, 0, 0, 0, 0, 0, 189.075, 0, 0, 0, 0, 0, 194.382, 322.422, 0, 0, 0, 0, 318.442, 317.778, 0, 0, 0, 0, 319.769, 260.724, 0, 0, 0, 0, 383.457, 248.783, 0, 0, 0, 0, 383.457, 128.04, 0, 0, 0, 0, 632.903, 123.396, 0, 0, 0, 0, 640.201, 185.094, 0, 0, 0, 0, 572.532, 195.046, 0, 0, 0, 0, 577.839, 385.447, 0, 0, 0, 0, 640.864, 380.803, 0, 0, 0, 0, 637.547, 330.383, 0, 0, 0, 0, 701.899, 317.115 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.32684, 1.32684, 0, 0, 0, 0, 188.411, 0, 0, 0, 0, 0, 195.709, 325.076, 0, 0, 0, 0, 319.105, 316.451, 0, 0, 0, 0, 318.442, 256.08, 0, 0, 0, 0, 383.457, 250.109, 0, 0, 0, 0, 383.457, 68.9957, 0, 0, 0, 0, 575.849, 61.6981, 0, 0, 0, 0, 574.522, 3.31711, 0, 0, 0, 0, 705.879, -4.64394, 0, 0, 0, 0, 701.235, -59.7078, 0, 0, 0, 0, 759.616, -67.6689, 0, 0, 0, 0, 772.221, -0.663422, 0, 0, 0, 0, 829.275, -2.65368 )
}

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
Enemy = ExtResource( 2 )

[node name="TileMapGround" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 19, 0, 1, 0, 0, 2, 2, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 11, 0, 7, 0, 0, 8, 2, 0, 9, 1, 0, 10, 2, 0, 11, 0, 0, 12, 13, 0, 13, 14, 0, 14, 12, 0, 15, 12, 0, 65536, 21, 0, 65537, 24, 0, 65538, 5, 0, 65539, 5, 0, 65540, 14, 0, 65541, 11, 0, 65542, 11, 0, 65543, 0, 0, 65544, 1, 0, 65545, 1, 0, 65546, 13, 0, 65547, 5, 0, 65548, 23, 0, 65549, 22, 0, 65550, 15, 0, 65551, 12, 0, 131072, 0, 0, 131073, 2, 0, 131074, 21, 0, 131075, 0, 0, 131076, 4, 0, 131077, 0, 0, 131078, 0, 0, 131079, 13, 0, 131080, 5, 0, 131081, 5, 0, 131082, 23, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 12, 0, 131087, 12, 0, 196608, 0, 0, 196609, 12, 0, 196610, 2, 0, 196611, 18, 0, 196612, 4, 0, 196613, 18, 0, 196614, 2, 0, 196615, 17, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 14, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 2, 0, 262144, 0, 0, 262145, 3, 0, 262146, 3, 0, 262147, 2, 0, 262148, 4, 0, 262149, 1, 0, 262150, 2, 0, 262151, 4, 0, 262152, 1, 0, 262153, 0, 0, 262154, 13, 0, 262155, 23, 0, 262156, 0, 0, 262157, 18, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 12, 0, 327682, 0, 0, 327683, 0, 0, 327684, 4, 0, 327685, 1, 0, 327686, 13, 0, 327687, 23, 0, 327688, 0, 0, 327689, 0, 0, 327690, 4, 0, 327691, 1, 0, 327692, 12, 0, 327693, 12, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 12, 0, 393218, 21, 0, 393219, 1, 0, 393220, 22, 0, 393221, 5, 0, 393222, 23, 0, 393223, 0, 0, 393224, 0, 0, 393225, 1, 0, 393226, 4, 0, 393227, 13, 0, 393228, 15, 0, 393229, 12, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 12, 0, 458754, 12, 0, 458755, 0, 0, 458756, 0, 0, 458757, 1, 0, 458758, 0, 0, 458759, 18, 0, 458760, 20, 0, 458761, 0, 0, 458762, 22, 0, 458763, 23, 0, 458764, 12, 0, 458765, 12, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 21, 0, 524292, 21, 0, 524293, 0, 0, 524294, 19, 0, 524295, 18, 0, 524296, 19, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )
_sections_unfolded = [ "Cell", "Transform" ]

[node name="PathSouth" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 97.2104, 96.8508 )
curve = SubResource( 1 )

[node name="PathFollow" type="PathFollow2D" parent="PathSouth" index="0"]

position = Vector2( -1.32684, 0 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="PathNorth" type="Path2D" parent="." index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 97.2104, 95.5239 )
curve = SubResource( 2 )

[node name="PathFollow" type="PathFollow2D" parent="PathNorth" index="0"]

position = Vector2( -1.32684, 1.32684 )
rotation = -0.00699288
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Enemy_Walk" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true
_sections_unfolded = [ "Pause" ]

[node name="Spawn" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TileMapFantasyGround" type="TileMap" parent="." index="5"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 2, 0, 2, 0, 0, 3, 2, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 1, 0, 65536, 0, 0, 65537, 1, 0, 65538, 0, 0, 65539, 1, 0, 65540, 0, 0, 65541, 1, 0, 65542, 1, 0, 65543, 2, 0, 131072, 2, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 1, 0, 196611, 0, 0, 196612, 0, 0, 196613, 1, 0, 196614, 2, 0, 196615, 0, 0 )
_sections_unfolded = [ "Cell" ]

[connection signal="timeout" from="Enemy_Walk" to="." method="_on_Enemy_Walk_timeout"]

[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]


